<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_tiny"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/feedback_desc" />

    <EditText
            android:id="@+id/feedbackText"
            style="@style/Holo.EditText.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_tiny"
            android:inputType="textCapSentences"
            android:gravity="top|left"
            android:hint="@string/feedback_hint"
            android:maxLines="3"
            android:minLines="2" />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/gray" />

    <Button
            android:id="@+id/send_feedback"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_gravity="bottom"
            android:background="@drawable/abs__item_background_holo_light"
            android:text="@string/send" />

</LinearLayout>