<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/robot_down" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_small"
            android:shadowColor="@color/dark_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/fallen"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttons"
            android:layout_alignParentRight="true"
            android:drawablePadding="@dimen/padding_tiny"
            android:drawableRight="@drawable/arrow_down_small"
            android:padding="@dimen/padding_small"
            android:text="@string/help_us"
            android:textColor="@color/wejit_off_white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/image"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/abs__item_background_holo_dark"
                android:text="@string/close" />

            <ImageView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:src="@color/gray" />

            <Button
                android:id="@+id/report"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/abs__item_background_holo_dark"
                android:text="@string/report" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_above="@id/buttons"
            android:src="@color/gray" />
    </RelativeLayout>

</ScrollView>